--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "bourbon-neat": "^1.7.2",
     "browser-sync": "^2.10.1",
     "gulp": "^3.9.0",
+    "gulp-cached": "^1.1.0",
     "gulp-sass": "^2.1.1",
+    "gulp-scss-lint": "^0.3.8",
+    "gulp-sourcemaps": "^1.6.0",
     "lazypipe": "^1.0.1"
   }
 }
