--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^2.10.1",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
+    "gulp-iconfont": "^5.0.1",
     "gulp-sass": "^2.1.1",
     "gulp-scss-lint": "^0.3.8",
     "gulp-sourcemaps": "^1.6.0",
