--- a/package.json
+++ b/package.json
@@ -14,11 +14,21 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.10.1",
+    "browserify": "^13.0.0",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-iconfont": "^5.0.1",
     "gulp-sass": "^2.1.1",
     "gulp-scss-lint": "^0.3.8",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^3.0.7",
+    "lodash.assign": "^3.2.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
+  },
+  "dependencies": {
+    "jquery": "^2.2.0",
+    "velocity-animate": "^1.2.3"
   }
 }
