--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "browser-sync": "^2.10.1",
     "browserify": "^13.0.0",
+    "coffeeify": "^2.0.1",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-iconfont": "^5.0.1",
