--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "browser-sync": "^2.10.1",
     "browserify": "^13.0.0",
+    "browserify-shim": "^3.8.11",
     "coffeeify": "^2.0.1",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
@@ -29,7 +30,9 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
-    "jquery": "^2.2.0",
     "velocity-animate": "^1.2.3"
+  },
+  "browserify-shim": {
+    "jQuery": "global:jQuery"
   }
 }
